--- a/src/styles/element-ui.scss
+++ b/src/styles/element-ui.scss
@@ -14,7 +14,7 @@
   transform: none;
   left: 0;
   position: relative;
-  margin: 0 auto;
+  margin: 68px auto!important;
 }
 
 //element ui upload
@@ -79,7 +79,7 @@
 }
 
 .el-input {
-  width: 316px;
+  width: 232px;
 }
 
 .el-table th > .cell {
@@ -223,7 +223,7 @@ ul {
 }
 
 .el-textarea {
-  width: 790px;
+  width: 600px;
 }
 
 .el-page-header__left {
