0718 修改通用页面

--- a/src/styles/element-ui.scss
+++ b/src/styles/element-ui.scss
@@ -78,9 +78,9 @@
   border: none !important;
 }
 
-.el-input {
-  width: 232px;
-}
+//.el-input {
+//  width: 100%;
+//}
 
 .el-table th > .cell {
   font-weight: bold;
