--- a/src/styles/commonPage.scss
+++ b/src/styles/commonPage.scss
@@ -187,6 +187,32 @@
     justify-content: center;
   }
 
+  .container {
+    margin-top: 20px;
+
+    .el-input {
+      width: 232px;
+    }
+
+    .select {
+      background-color: #FFF;
+      background-image: none;
+      border-radius: 4px;
+      border: 1px solid #DCDFE6;
+      -webkit-box-sizing: border-box;
+      box-sizing: border-box;
+      color: #606266;
+      display: inline-block;
+      font-size: inherit;
+      height: 32px;
+      line-height: 32px;
+      outline: 0;
+      padding: 0 15px;
+      -webkit-transition: border-color .2s cubic-bezier(.645, .045, .355, 1);
+      transition: border-color .2s cubic-bezier(.645, .045, .355, 1);
+      width: 232px;
+    }
+  }
 }
 
 
