--- a/src/styles/element-ui.scss
+++ b/src/styles/element-ui.scss
@@ -85,6 +85,11 @@
 .el-table th > .cell {
   font-weight: bold;
   color: #000;
+  text-align: center;
+}
+
+.el-table td {
+  text-align: center;
 }
 
 iframe {
