车辆定位初版

--- a/src/styles/element-ui.scss
+++ b/src/styles/element-ui.scss
@@ -14,7 +14,7 @@
   transform: none;
   left: 0;
   position: relative;
-  margin: 68px auto!important;
+  //margin: 68px auto!important;
 }
 
 //element ui upload
